--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,7 +8,7 @@
 		<table width=60%>
     <tbody>
     <tr>
-			<td><h2>LOGIN:</h2></td>
+			<td><h2>REGISTER:</h2></td>
     </tr>
     <tr>
         <td colspan="2">
