--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,64 +1,43 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
-<head>
-	<title>{{ title }}</title>
-</head>
-<body>
-	<center>
-		<table width=60%>
-    <tbody>
-    <tr>
-			<td><a href="/"><h2>OrangBulukumba.com</h2></a></td>
-			<td style="text-align: right;"><h2>
-				{% if current_user.is_authenticated %}
-					<a href="/profile">{{ current_user.username}}</a>
-				{% else %}
-				  <a href="/login/">LOGIN</a>
-				{% endif %}
-			</h2></td>
-    </tr>
+{% extends "layout.html" %}
+
+{% block content %}
 		<tr bgcolor="#eee">
         <td colspan="2">
 					<h3>{{ post.title }}</h3><hr>
-					{{ post.user.full_name }} | {{ post.createdtime }}
+					<a href="/user/{{post.user.username}}">{{ post.user.full_name }}</a> | {{ post.createdtime }}
 					<p>
 							{{ post.content }}
 					</p>
-
-					{% if not vote.query.filter_by(id_post=post.id, id_user=current_user.id).first() %}
-					<form method="POST" action="">
-						<input type="hidden" name="vote" value={{ post.id }} />
-						<input type="submit" value="VOTE" />
+					<form action="/post/vote" method="POST" name="vote">
+						<input type="hidden" value="{{post.id}}" name="vote">
+	          <input type="submit" value="VOTE" name="vote">
 					</form>
-					{% else %}
-					<i>Kamu telah memberikan vote ke post ini</i></br>
+					{% with errors = get_flashed_messages() %}
+					{% if errors %}
+					  {%- for msg in errors %}
+					    <i style="color:red">{{ msg }}</i>
+					    {% endfor %}
 					{% endif %}
-
-          <hr>
-					<p>Votes: {{ vote.query.filter_by(id_post = post.id).count() }}</p>
-          <p>
-            {% for a in comments.query.filter_by(id_post=post.id).all() %}
-            <p>{{ a.user.full_name }}: {{ a.desc }}</p>
-            {% endfor %}
-
-              Komentar:</br>
-        	<form action="" method="POST">
-            {{ form.desc(style="width: 100%;") }}
-            {% for error in form.desc.errors %}
-	            {% if error %}<i style="color:red">{{error}}</i>{% endif %}
+					{% endwith %}
+					<p>Votes: {{ post.Vote.count() }}</p>
+	        	{% for a in post.Comment.all() %}
+            	<p>{{ a.user.full_name }}: {{ a.desc }}</p>
 	          {% endfor %}
-            {{ form.hidden_tag() }}
+
+          Komentar:</br>
+					<form action="" method="POST" name="desc">
+						{{ form.desc(style="width: 100%;") }}
+						{{ form.hidden_tag() }}
             </br>
-            <input type="submit" value="Komentar">
+            <input type="submit" value="KOMENTAR" name="desc">
           </form>
+					{{ comment_msg }}
+					{% for error in form.desc.errors %}
+						{% if error %}<i style="color:red">{{error}}</i>{% endif %}
+					{% endfor %}
+
           </p>
 				</td>
     </tr>
-    <tr>
-        <td colspan="2"> </td>
-    </tr>
-    </tbody>
-		</table>
-	</center>
-</body>
-</html>
+
+{% endblock %}
